--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ body {
   direction: rtl;
   overflow-x: hidden;
   line-height: 1.3;
+   background-image: url('../assets/images/background.png'); 
+   background-size: cover; 
+   background-position: center; 
+   background-repeat: no-repeat; 
+   background-attachment: fixed; 
 }
 
 ul {
