--- a/css/style.css
+++ b/css/style.css
@@ -280,31 +280,33 @@ a {
   font-size: 3.5rem;
   color: var(--deep-green);
   display: flex;
-  align-items: center;
+  align-items: end;
   gap: 15px;
   font-weight: 800;
   flex-wrap: wrap;
   justify-content: center;
 }
-.code-icon-wrapper {
-  background-color: var(--light-green);
-  width: 80px;
-  height: 100px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 48% 52% 58% 42% / 65% 60% 40% 35%;
-  font-family: monospace;
-  font-size: 1.8rem;
-  color: var(--deep-green);
-  transform: rotate(-8deg);
-}
+
 .hero-subtitle {
   font-size: 1.5rem;
   color: var(--sec-txt);
   opacity: 0.9;
   margin-top: 15px;
 }
+
+.hero-icon {
+  width: 60px;
+  height: 85px;
+  vertical-align: middle; 
+}
+
+.hero-vektor {
+  width: 50px;
+  height: 100px;
+  vertical-align: middle; 
+  margin-top: 4px;
+}
+
 
 /* =========================================
    SLIDER SECTION
